//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.net.msg;

import "com/sandpolis/core/instance/state.proto";

option java_package = "com.sandpolis.core.net.msg";
option optimize_for = CODE_SIZE;

message RQ_STSnapshot {
    string base_oid = 1;
    repeated string whitelist_oid = 2;
}

message RS_STSnapshot {
    oneof snapshot {
        core.instance.ProtoDocument document = 1;
        core.instance.ProtoCollection collection = 2;
    }
}

message RQ_STSync {
    enum STSyncDirection {
        UPSTREAM = 0;
        DOWNSTREAM = 1;
        BIDIRECTIONAL = 2;
    }

    string base_oid = 1;
    repeated string whitelist_oid = 2;

    STSyncDirection direction = 3;
    int32 update_period = 4;
    int32 stream_id = 5;
}

message RS_STSync {
    oneof snapshot {
        core.instance.ProtoDocument document = 1;
        core.instance.ProtoCollection collection = 2;
    }
}
